<resources>
    <string name="app_name">MovieTMDB</string>
    <string name="title_popular">Popular</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_selected">Selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_description">An Amazon princess comes to the world of Man in the grips of the First World War to confront the forces of evil and bring an end to human conflict.</string>
    <string name="rate_bar">Rate Bar</string>
    <string name="item_successfully_added">Movie Successfully Added to Favorite!!</string>
    <string name="item_successfully_deleted">Movie Successfully Deleted as Favorite!!</string>
    <string name="network_failed">Check your network or sth wrong with loading data…</string>
</resources>