<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_network_failed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/network_failed"
        android:textSize="33sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_network_failed" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/host_details"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".18" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_gradiant_item_movie_reverse"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgPosterMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/mr_nobody_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:shapeAppearanceOverlay="@style/RoundedImageView" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgCoverMovie"
                android:layout_width="150dp"
                android:layout_height="400dp"
                android:layout_marginStart="22dp"
                android:paddingTop="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/mr_nobody"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                tools:layout_editor_absoluteX="8dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgCoverMovie"
                app:layout_constraintTop_toBottomOf="@+id/imgPosterMovie">

                <TextView
                    android:id="@+id/tvTitleMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/guideline11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline10" />

                <TextView
                    android:id="@+id/tvRateMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_bar" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_bar" />

                <TextView
                    android:id="@+id/tvVoteAverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_bar" />

                <TextView
                    android:id="@+id/tvVoteCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_bar" />

                <TextView
                    android:id="@+id/tvPopularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_bar" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="22dp"
                android:text="@string/movie_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>